--- a/bicicleta/nebula.html
+++ b/bicicleta/nebula.html
@@ -118,6 +118,21 @@
       </ul>
   </article>
 
+  <section class="segurobicicleta-bg">
+    <div class="segurobicicleta container">
+      <div class="segurobicicleta-imagem">
+        <img src="../img/fotos/seguros.jpg" alt="">
+      </div>
+      <div class="segurobicicleta-conteudo">
+        <h2 class="font-1-xxl cor-0">Pedale mais
+          tranquilo com
+          o nosso <span class="cor-p1">seguro.</span></h2>
+        <p class="cor-5 font-2-l">Inscreva-se em um dos planos do nosso seguro Bikcraft e aproveite diversos benefícios.</p>
+        <a class="botao" href="../seguros.html">conheça mais</a>
+      </div>
+    </div>
+  </section>
+
   <footer class=" footer-bg">
     <div class="footer-container">
       <img src="../img/bikcraft.svg" alt="Bikcraft">
