--- a/seguros.html
+++ b/seguros.html
@@ -134,8 +134,6 @@
   </section>
 
 
-
-
   <footer class="footer-bg">
     <div class="footer-container">
       <img src="./img/bikcraft.svg" alt="Bikcraft">
@@ -167,3 +165,6 @@
       <p class="cor-6">Bikcraft © Alguns direitos reservados.</p>
     </div>
   </footer>
+</body>
+
+</html>
