--- a/termo.html
+++ b/termo.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bikcraft </title>
+  <title>Bikcraft - Termos e Condições</title>
   <meta name="description" content="Termos e Condições">
   <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -99,3 +99,7 @@
       <p class="cor-6">Bikcraft © Alguns direitos reservados.</p>
     </div>
   </footer>
+
+</body>
+
+</html>
