--- a/seguros.html
+++ b/seguros.html
@@ -12,6 +12,7 @@
 <body>
   <header class="header-bg">
     <div class="header container">
+      aaaaa
       <a href="./">
         <img src="./img/bikcraft.svg" alt="Bikcraft">
       </a>
